--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </div>
 
 
-<!-- <script src="http://cdn.bootcss.com/react/0.13.3/react.min.js"></script> -->
-<script src="public/react.min.js"></script>
+<script src="http://cdn.bootcss.com/react/0.13.3/react.min.js"></script>
+<!-- <script src="public/react.min.js"></script> -->
 <script src="dist/build.js"></script>
 </body>
 </html>
