--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 
 <script src="http://cdn.bootcss.com/react/0.13.3/react.min.js"></script>
 <!-- <script src="public/react.min.js"></script> -->
-<script src="dist/build.js"></script>
+<script src="build.js"></script>
 </body>
 </html>
